[gd_scene load_steps=3 format=3 uid="uid://xfxlxvaa6fc6"]

[ext_resource type="Script" path="res://bosses/boss_weapons/boss_shotgun.gd" id="1_6gvcq"]
[ext_resource type="Texture2D" uid="uid://dvpqs4dayer11" path="res://icon.svg" id="1_owybx"]

[node name="BossShotgun" type="Node2D"]
script = ExtResource("1_6gvcq")
can_shoot = false

[node name="BulletSpawns" type="Node2D" parent="."]

[node name="BulletSpawn1" type="Marker2D" parent="BulletSpawns"]
position = Vector2(11, -7)

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn1"]
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_owybx")

[node name="BulletSpawn2" type="Marker2D" parent="BulletSpawns"]
position = Vector2(11, 7)

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn2"]
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_owybx")

[node name="BulletSpawn3" type="Marker2D" parent="BulletSpawns"]
position = Vector2(10, -14)

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn3"]
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_owybx")

[node name="BulletSpawn4" type="Marker2D" parent="BulletSpawns"]
position = Vector2(10, 14)

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn4"]
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_owybx")

[node name="BulletSpawn5" type="Marker2D" parent="BulletSpawns"]
position = Vector2(8, -21)

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn5"]
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_owybx")

[node name="BulletSpawn6" type="Marker2D" parent="BulletSpawns"]
position = Vector2(8, 21)

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn6"]
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_owybx")

[node name="BossShotTimer" type="Timer" parent="."]

[connection signal="timeout" from="BossShotTimer" to="." method="_on_boss_shot_timer_timeout"]
